--- a/src/HostConsole/HostConsole.csproj
+++ b/src/HostConsole/HostConsole.csproj
@@ -1,8 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <EnableDefaultItems>false</EnableDefaultItems>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="*.cs" />
+    <None Include="README.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.19555.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Iot.Device.Bindings">
+      <HintPath>..\..\..\iot\artifacts\bin\Iot.Device.Bindings\Debug\netcoreapp2.1\Iot.Device.Bindings.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
