Added Rover with StateMachine with empty states: Iddle, RemoteControlled and Autonous

--- a/src/Rover.Host/Rover.Host.csproj
+++ b/src/Rover.Host/Rover.Host.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <LangVersion>latest</LangVersion>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <EnableDefaultItems>false</EnableDefaultItems>
@@ -8,17 +9,22 @@
 
   <ItemGroup>
     <Compile Include="*.cs" />
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="README.md" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.19555.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0-preview2.19525.4" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="3.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10260" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.2-dev-00824" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Iot.Device.Bindings">
-      <HintPath>..\..\..\iot\artifacts\bin\Iot.Device.Bindings\Debug\netcoreapp2.1\Iot.Device.Bindings.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Rover.Core\Rover.Core.csproj" />
   </ItemGroup>
 
 </Project>
