--- a/src/Rover.Core/Rover.Core.csproj
+++ b/src/Rover.Core/Rover.Core.csproj
@@ -6,9 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Iot.Device.Bindings" Version="1.1.0-prerelease.19557.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.0.0" />
-    <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.19557.1" />
+    <PackageReference Include="Gamepad" Version="1.0.1" />
+    <PackageReference Include="Iot.Device.Bindings" Version="1.1.0-prerelease.19565.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0-preview3.19553.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0-preview3.19553.2" />
+    <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.19565.1" />
   </ItemGroup>
 </Project>
