--- a/src/Rover.Core/Rover.Core.csproj
+++ b/src/Rover.Core/Rover.Core.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Gamepad" Version="1.0.1" />
-    <PackageReference Include="Iot.Device.Bindings" Version="1.1.0-prerelease.19565.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0-preview3.19553.2" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0-preview3.19553.2" />
-    <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.19565.1" />
+    <PackageReference Include="Iot.Device.Bindings" Version="1.1.0-prerelease.20118.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-preview.2.20118.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0-preview.2.20118.7" />
+    <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.20118.1" />
   </ItemGroup>
+
 </Project>
