--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
 	<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />    
@@ -6,7 +6,7 @@
 	<add key="dotnet.myget.org" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
   </packageSources>
   <packageRestore>
-    <add key="enabled" value="False" />
+    <add key="enabled" value="True" />
     <add key="automatic" value="True" />
   </packageRestore>
   <bindingRedirects>
