--- a/src/Rover.Host/Rover.Host.csproj
+++ b/src/Rover.Host/Rover.Host.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0-preview.2.20118.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.1-dev-00142" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10265" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
