--- a/src/Rover.Host/Rover.Host.csproj
+++ b/src/Rover.Host/Rover.Host.csproj
@@ -7,13 +7,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
-    <PackageReference Include="Serilog.AspNetCore" Version="3.2.1-dev-00142" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10265" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.3.0-dev-00152" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10269" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00864" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MessageBus\MessageBus.csproj" />
     <ProjectReference Include="..\Rover.Core\Rover.Core.csproj" />
   </ItemGroup>
   
