Added some infrastructure to support the MessageBus

--- a/src/Rover.Core/Rover.Core.csproj
+++ b/src/Rover.Core/Rover.Core.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.20118.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MessageBus\MessageBus.csproj" />
+  </ItemGroup>
+
 </Project>
