Just one or two changes to get closer to the Architecture we spoke about...

--- a/src/Rover.Core/Robot.Core.csproj
+++ b/src/Rover.Core/Robot.Core.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MessageBus\MessageBus.csproj" />
+    <ProjectReference Include="..\MessageBus\Robot.MessageBus.csproj" />
+    <ProjectReference Include="..\Robot.Utils\Robot.Utils.csproj" />
   </ItemGroup>
 
 </Project>
