--- a/src/Robot.Controllers/Robot.Controllers.csproj
+++ b/src/Robot.Controllers/Robot.Controllers.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MessageBus\Robot.MessageBus.csproj" />
     <ProjectReference Include="..\Robot.Drivers\Robot.Drivers.csproj" />
   </ItemGroup>
