Adding script that packs all packable projects to be able to re use them from Spot robot

--- a/src/Robot.Start/Robot.Start.csproj
+++ b/src/Robot.Start/Robot.Start.csproj
@@ -30,4 +30,8 @@
     </None>
   </ItemGroup>
   
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="$(SolutionDir)..\scripts\publishDevPackages.bat" />
+  </Target>
+  
 </Project>
