Moved MessageBus to Robot.Messagebus for consitency

--- a/src/Robot.MessageBus/Robot.MessageBus.csproj
+++ b/src/Robot.MessageBus/Robot.MessageBus.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RepositoryUrl>https://github.com/nahueltaibo/netcorerover</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,5 +17,4 @@
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\9.0.1\lib\netstandard1.0\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
-
 </Project>
