--- a/src/Robot.Controllers/Robot.Controllers.csproj
+++ b/src/Robot.Controllers/Robot.Controllers.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <RepositoryUrl>https://github.com/nahueltaibo/netcorerover</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MessageBus\Robot.MessageBus.csproj" />
     <ProjectReference Include="..\Robot.Drivers\Robot.Drivers.csproj" />
+    <ProjectReference Include="..\Robot.MessageBus\Robot.MessageBus.csproj" />
   </ItemGroup>
 
 </Project>
