Added Robot.Model project, so we share model items.. To be reviewed...

--- a/src/Robot.Drivers/Robot.Drivers.csproj
+++ b/src/Robot.Drivers/Robot.Drivers.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Robot.Model\Robot.Model.csproj" />
     <ProjectReference Include="..\Robot.Utils\Robot.Utils.csproj" />
   </ItemGroup>
 
