Removing personal token from repo

--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -9,7 +9,7 @@
     <packageSourceCredentials>
         <github>
             <add key="Username" value="nahueltaibo" />
-            <add key="ClearTextPassword" value="7534be5acee73ea6c6727d818cd2d8e1a31b0949" />
+            <add key="ClearTextPassword" value="<GIT_TOKEN_HERE>" />
         </github>
     </packageSourceCredentials>
   <packageRestore>
