--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v1
     - name: Build with dotnet
-      run: dotnet build --configuration Release --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
+      run: dotnet build "./src/NetCoreRover.sln" --configuration Release --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
       shell: bash
     - name: Publish nuget
       run: |
