--- a/src/Robot.MessageBus/Robot.MessageBus.csproj
+++ b/src/Robot.MessageBus/Robot.MessageBus.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10269" />
   </ItemGroup>
 
