--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.105
+    - name: Go to solution
+      run: cd src
     - name: Build with dotnet
-      run: dotnet build "./src/NetCoreRover.sln" --configuration Debug
+      run: dotnet build --configuration Debug
     - name: Setup nuget config
-      run: sed 's/GITHUB_TOKEN/${{secrets.GithubPackagePublisher }}/g' ./src/nuget.config > ./src/nuget.config
+      run: sed 's/GITHUB_TOKEN/${{secrets.GithubPackagePublisher }}/g' ./nuget.config > nuget.config
     - name: Publish nuget
-      run: dotnet nuget push src/Robot.MessageBus/bin/Debug/*.nupkg -s "github"
+      run: dotnet nuget push ./Robot.MessageBus/bin/Debug/*.nupkg -s "github"
