--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: sed 's/GITHUB_TOKEN/${{secrets.GithubPackagePublisher }}/g' ./nuget.config > nuget.config
     - name: Show nuget.config contents
       working-directory: ./src
-      run: cat nuget.config
+      run: less nuget.config
     - name: Publish nuget
       working-directory: ./src
       run: dotnet nuget push ./Robot.MessageBus/bin/Debug/*.nupkg -s "github"
