--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,12 @@ jobs:
     - name: Build with dotnet
       working-directory: ./src
       run: dotnet build --configuration Debug
-  
+    - name: Setup nuget config
+      working-directory: ./src
+      run: sed 's/GITHUB_TOKEN/${{secrets.GithubPackagePublisher }}/g' ./nuget.config > nuget.config
+    - name: Show nuget.config contents
+      working-directory: ./src
+      run: less nuget.config
+    - name: Publish nuget
+      working-directory: ./src
+      run: dotnet nuget push ./Robot.MessageBus/bin/Debug/*.nupkg -s "github"
