--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.105
+
     - name: Build with dotnet
       run: dotnet build --configuration Debug --version-suffix prerelease-$(date +%Y%m%d%H%M%S)
       shell: bash
+      working-directory: ./src
+
     - name: Publish nuget
       run: |
            for f in ./Robot.MessageBus/bin/Debug/*.nupkg
