--- a/src/Robot.Start/Robot.Start.csproj
+++ b/src/Robot.Start/Robot.Start.csproj
@@ -29,5 +29,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="PUSHD $(SolutionDir)..\scripts&#xD;&#xA;updateLocalNugetPackages.cmd&#xD;&#xA;POPD&#xD;&#xA;" />
+  </Target>
     
 </Project>
