Issue #9:  Implement DistanseSensor code for the HC-SR04 sonar sensor. Initial approach implemented. Requires test coverage and real-device debugging

--- a/src/Robot.Start/appsettings.json
+++ b/src/Robot.Start/appsettings.json
@@ -1,2 +1,27 @@
 {
+  "sensors": {
+    "sonars": [
+      {
+        "SensorId": 1,
+        "Angle": -0.3490658503988659,
+        "TriggerPin": 1,
+        "EchoPin": 2,
+        "MeasuringInterval": "00:00:00.100"
+      },
+      {
+        "SensorId": 2,
+        "Angle": 0,
+        "TriggerPin": 3,
+        "EchoPin": 4,
+        "MeasuringInterval": "00:00:00.100"
+      },
+      {
+        "SensorId": 3,
+        "Angle": 0.3490658503988659,
+        "TriggerPin": 5,
+        "EchoPin": 6,
+        "MeasuringInterval": "00:00:00.100"
+      }
+    ]
+  }
 }
