--- a/src/Robot.MessageBus/Robot.MessageBus.csproj
+++ b/src/Robot.MessageBus/Robot.MessageBus.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RepositoryUrl>https://github.com/nahueltaibo/netcorerover</RepositoryUrl>
-  </PropertyGroup>
+    <Version>1.0.1</Version>
+    </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
