--- a/.github/workflows/publish_nugets.yml
+++ b/.github/workflows/publish_nugets.yml
@@ -2,7 +2,8 @@ name: publish nugets
 on:
   push:
     branches:
-      - develop
+      #- develop
+      - 15_create_github_action_to_build_nuget_packages
 jobs:
   publish:
     name: list on nuget
@@ -26,5 +27,5 @@ jobs:
           # VERSION_REGEX: <Version>(.*)<\/Version> # Regex pattern to extract version info in a capturing group
           # TAG_COMMIT: true # Flag to enable / disalge git tagging
           # TAG_FORMAT: v* # Format of the git tag, [*] gets replaced with version
-          # NUGET_KEY: ${{secrets.NUGET_API_KEY}} # nuget.org API key
+          NUGET_KEY: ${{secrets.NugetKey}} # nuget.org API key
           # PACKAGE_NAME: NuGet package name, required when it's different from project name. Defaults to project name
