--- a/src/Robot.MessageBus/Robot.MessageBus.csproj
+++ b/src/Robot.MessageBus/Robot.MessageBus.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RepositoryUrl>https://github.com/nahueltaibo/netcorerover</RepositoryUrl>
-    <Version>1.0.1</Version>
+    <Version>1.0.0-prerelease.01</Version>
     </PropertyGroup>
 
   <ItemGroup>
