--- a/src/Robot.Reactive/Robot.Reactive.csproj
+++ b/src/Robot.Reactive/Robot.Reactive.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0-preview.2.20156.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
