--- a/src/Robot.Start/Robot.Start.csproj
+++ b/src/Robot.Start/Robot.Start.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0-preview.2.20156.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.3.0-dev-00152" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10272" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
@@ -29,9 +29,5 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="PUSHD $(SolutionDir)..\scripts&#xD;&#xA;updateLocalNugetPackages.cmd&#xD;&#xA;POPD&#xD;&#xA;" />
-  </Target>
     
 </Project>
