--- a/src/Robot.Drivers/Robot.Drivers.csproj
+++ b/src/Robot.Drivers/Robot.Drivers.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RepositoryUrl>https://github.com/nahueltaibo/netcorerover</RepositoryUrl>
+    <VersionPrefix>1.0.1</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
