--- a/src/Robot.Utils/Robot.Utils.csproj
+++ b/src/Robot.Utils/Robot.Utils.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RepositoryUrl>https://github.com/nahueltaibo/netcorerover</RepositoryUrl>
+    <VersionPrefix>1.0.1</VersionPrefix>
   </PropertyGroup>
 
 </Project>
