--- a/src/Robot.Behaviors/Robot.Behaviors.csproj
+++ b/src/Robot.Behaviors/Robot.Behaviors.csproj
@@ -5,4 +5,8 @@
     <VersionPrefix>1.0.0</VersionPrefix>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
