--- a/src/nuget.config
+++ b/src/nuget.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-	<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />    
-	<add key="dotnetfeed.blob.core.windows.net" value="https://dotnetfeed.blob.core.windows.net/dotnet-iot/index.json" />
-	<add key="dotnet.myget.org" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+	<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />   
+	<add key="DotNet IoT" value="https://dotnetfeed.blob.core.windows.net/dotnet-iot/index.json" />
   </packageSources>
   <packageRestore>
     <add key="enabled" value="True" />
