--- a/src/Robot.Start/appsettings.json
+++ b/src/Robot.Start/appsettings.json
@@ -22,6 +22,16 @@
         "EchoPin": 6,
         "MeasuringInterval": "00:00:00.100"
       }
+    ],
+	"switches": [
+      {
+        "SensorId": 1,        
+        "TriggerPin": 5        
+      },
+      {
+        "SensorId": 2,        
+        "TriggerPin": 6,        
+      }
     ]
   }
 }
