--- a/src/Robot.MessageBus/Robot.MessageBus.csproj
+++ b/src/Robot.MessageBus/Robot.MessageBus.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.2-dev-10272" />
+    <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
